--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -8,7 +8,7 @@ group = 'com.otaliastudios'
 
 //region android dependencies
 
-def travis = true // TODO System.getenv("TRAVIS")
+def travis = System.getenv("TRAVIS")
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
