Increase I frame interval, add comments

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.otaliastudios.cameraview.demo">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -8,9 +9,9 @@
         android:allowBackup="false"
         android:icon="@mipmap/cameraview"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/cameraview"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name=".CameraActivity"
