--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,6 +23,6 @@ android {
 
 dependencies {
     implementation project(':cameraview')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 }
