Add option to see RAW result through share option

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
 
         <activity
             android:name=".CameraActivity"
-            android:theme="@style/Theme.MainActivity"
             android:configChanges="screenLayout|keyboardHidden"
             android:hardwareAccelerated="true">
             <intent-filter>
@@ -24,9 +23,23 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".PicturePreviewActivity" />
+        <activity
+            android:name=".PicturePreviewActivity"
+            android:label="Picture Preview" />
 
-        <activity android:name=".VideoPreviewActivity"/>
+        <activity
+            android:name=".VideoPreviewActivity"
+            android:label="Video Preview" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
 
     </application>
 
