--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,6 @@ env:
 
 before_install:
   # Perform actions that are common to all APIs in the matrix
-  - echo $ANDROID_HOME # We assume this is correctly set due to 'language:android'
   - echo y | sdkmanager "platform-tools" >/dev/null
   - echo y | sdkmanager "tools" >/dev/null
   - echo y | sdkmanager "emulator" >/dev/null
@@ -40,7 +39,7 @@ install:
 
   # Create and start the emulator
   - echo no | avdmanager create avd --force --name $EMULATOR_NAME --package "$EMULATOR" # Create emulator virtual device
-  - emulator -avd $EMULATOR_NAME -no-window -no-accel -no-snapshot -camera-back emulated -camera-front emulated -memory 2048 -writable-system & # Launch
+  - emulator -avd $EMULATOR_NAME -no-snapshot -no-window -no-accel -no-snapshot -camera-back emulated -camera-front emulated -memory 2048 -writable-system & # Launch
 
   # Wait for emulator
   - adb wait-for-device # Wait for adb process
