--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
       - BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
       - BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
     - uses: actions/checkout@v1
-      with: fetch-depth: 1
     - uses: actions/setup-java@v1
-      with: java-version: 1.8
+      with:
+        java-version: 1.8
     - run: ./gradlew bintrayUpload
