--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,9 @@ jobs:
       - TRAVIS: true
       - BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
       - BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - run: ./gradlew bintrayUpload
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - run: ./gradlew bintrayUpload
