--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,26 +10,32 @@ env:
   ANDROID_EMULATOR_TESTS_PATH: ./cameraview/build/outputs/code_coverage/debugAndroidTest/connected
 jobs:
   ANDROID_BASE_CHECKS:
+    name: Base Checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: ./gradlew demo:assembleDebug cameraview:javadoc
+      - name: Perform base checks
+        run: ./gradlew demo:assembleDebug cameraview:javadoc
   ANDROID_UNIT_TESTS:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: ./gradlew cameraview:testDebugUnitTest
-      - uses: actions/upload-artifact@v1
+      - name: Execute unit tests
+        run: ./gradlew cameraview:testDebugUnitTest
+      - name: Upload unit tests artifact
+        uses: actions/upload-artifact@v1
         with:
           name: unit_tests
           path: $ANDROID_UNIT_TESTS_PATH
   ANDROID_EMULATOR_TESTS:
+    name: Emulator Tests
     runs-on: macOS-latest
     strategy:
       matrix:
@@ -40,14 +46,16 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - uses: reactivecircus/android-emulator-runner@v1
+      - name: Execute emulator tests
+        uses: reactivecircus/android-emulator-runner@v1
         with:
           api-level: ${{ matrix.EMULATOR_API }}
           arch: ${{ matrix.EMULATOR_ARCH }}
           disable-animations: true
           headless: true
           script: ./gradlew cameraview:connectedCheck
-      - uses: actions/upload-artifact@v1
+      - name: Upload emulator tests artifact
+        uses: actions/upload-artifact@v1
         with:
           name: emulator_tests
           path: $ANDROID_EMULATOR_TESTS_PATH
@@ -59,16 +67,20 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - uses: actions/download-artifact@v1
+      - name: Download unit tests artifact
+        uses: actions/download-artifact@v1
         with:
             name: unit_tests
             path: $ANDROID_UNIT_TESTS_PATH
-      - uses: actions/download-artifact@v1
+      - name: Download emulator tests artifact
+        uses: actions/download-artifact@v1
         with:
             name: emulator_tests
             path: ANDROID_EMULATOR_TESTS_PATH
-      - run: ./gradlew cameraview:mergedCoverageReport
-      - uses: codecov/codecov-action@v1
+      - name: Create coverage report
+        run: ./gradlew cameraview:mergedCoverageReport
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_KEY }}
           file: ./cameraview/build/reports/mergedCoverageReport
