--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Android Deploy
 on: [release]
 jobs:
   BINTRAY_UPLOAD:
+    name: Bintray Upload
     runs-on: ubuntu-latest
     env:
       - TRAVIS: true
@@ -13,4 +14,5 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - run: ./gradlew bintrayUpload
+      - name: Perform bintray upload
+        run: ./gradlew bintrayUpload
