--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,9 @@ jobs:
     name: Bintray Upload
     runs-on: ubuntu-latest
     env:
-      - TRAVIS: true
-      - BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-      - BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
+      TRAVIS: true
+      BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+      BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
