--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,6 @@ on:
   pull_request:
 env:
   TRAVIS: true
-  ANDROID_UNIT_TESTS_PATH: ./cameraview/build/jacoco/
-  ANDROID_EMULATOR_TESTS_PATH: ./cameraview/build/outputs/code_coverage/debugAndroidTest/connected
 jobs:
   ANDROID_BASE_CHECKS:
     name: Base Checks
@@ -61,6 +59,7 @@ jobs:
           name: emulator_tests
           path: ./cameraview/build/outputs/code_coverage/debugAndroidTest/connected
   CODE_COVERAGE:
+    name: Code Coverage Report
     runs-on: ubuntu-latest
     needs: [ANDROID_UNIT_TESTS, ANDROID_EMULATOR_TESTS]
     steps:
@@ -78,8 +77,8 @@ jobs:
         with:
             name: emulator_tests
             path: ./cameraview/build/outputs/code_coverage/debugAndroidTest/connected
-      - name: Create coverage report
-        run: ./gradlew cameraview:mergedCoverageReport
+      - name: Create merged coverage report
+        run: ./gradlew cameraview:mergeCoverageReports
       - name: Upload coverage report
         uses: codecov/codecov-action@v1
         with:
