--- a/cameraview/build.gradle
+++ b/cameraview/build.gradle
@@ -8,7 +8,7 @@ group = 'com.otaliastudios'
 
 //region android dependencies
 
-def travis = System.getenv("TRAVIS")
+def isCI = System.getenv("TRAVIS")
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -19,7 +19,7 @@ android {
         versionCode 1
         versionName project.version
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        if (travis) {
+        if (isCI) {
             testInstrumentationRunnerArgument "notAnnotation", "com.otaliastudios.cameraview.DoNotRunOnTravis"
         }
     }
@@ -109,7 +109,7 @@ install {
 
 def bintrayUser
 def bintrayKey
-if (travis) {
+if (isCI) {
     bintrayUser = System.getenv("BINTRAY_USER")
     bintrayKey = System.getenv("BINTRAY_KEY")
 } else {
@@ -200,9 +200,16 @@ jacoco {
     reportsDir = file(reportsDirectory)
 }
 
-task mergedCoverageReport(type: JacocoReport) {
+task createCoverageReports() {
     dependsOn "testDebugUnitTest"
     dependsOn "connectedCheck"
+}
+
+task mergeCoverageReports(type: JacocoReport) {
+    // Let this be called without running the tests.
+    // dependsOn "createCoverageReports"
+    // However, ensure we have the compiled .class files.
+    dependsOn "compileDebugSources"
 
     // Merge unit tests and android tests data
     executionData = fileTree(dir: "$buildDir", includes: [
@@ -234,9 +241,9 @@ task mergedCoverageReport(type: JacocoReport) {
             '**/Dagger*Component$Builder.class',
             '**/*Module_*Factory.class',
     ]
-    if (travis) {
+    if (isCI) {
         // All these classes are tested by the integration tests that we are not able to
-        // run on the travis emulator.
+        // run on the CI emulator.
         classFilter.add('**/com/otaliastudios/cameraview/engine/CameraEngine**.*')
         classFilter.add('**/com/otaliastudios/cameraview/engine/Camera1Engine**.*')
         classFilter.add('**/com/otaliastudios/cameraview/engine/Camera2Engine**.*')
