--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        EMULATOR_API: [22]
+        EMULATOR_API: [22, 23, 24, 25, 26, 27]
         EMULATOR_ARCH: [x86_64]
     steps:
       - uses: actions/checkout@v1
