--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,8 @@ jobs:
       matrix:
         # Removing 26 for now because all GestureFinderTests fail in Espresso.inRoot().
         # Probably because of a system popup.
-        EMULATOR_API: [22, 23, 24, 25, 27, 28, 29]
+        # 22, 23, 24, 25,
+        EMULATOR_API: [27, 28, 29]
         EMULATOR_ARCH: [x86_64]
     steps:
       - uses: actions/checkout@v1
