--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,8 +39,8 @@ jobs:
     strategy:
       matrix:
         # TODO 28 fails in MarkerLayoutTest.testOnEvent() - weird FrameLayout.onMeasure crash
-        # 22, 23, 24, 25, 27
-        EMULATOR_API: [26, 28, 29]
+        # 22, 23, 24, 25, 27, 28
+        EMULATOR_API: [26, 29]
         EMULATOR_ARCH: [x86_64]
     steps:
       - uses: actions/checkout@v1
