--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,8 @@ jobs:
     strategy:
       matrix:
         # TODO 29 fails due to Mockito issues, probably reproducible locally.
-        # TODO 28 fails in MarkerLayoutTest.testOnEvent() - weird FrameLayout.onMeasure crash
-        # 22, 23, 24, 25, 26, 27, 28?
-        EMULATOR_API: [28]
+        # 22, 23, 24, 25, 26, 27, 28 work - some of them, with SdkExclude restrictions.
+        EMULATOR_API: [26]
         EMULATOR_ARCH: [x86_64]
     steps:
       - uses: actions/checkout@v1
