--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         # TODO 29 fails due to Mockito issues, probably reproducible locally.
         # 22, 23, 24, 25, 26, 27, 28 work - some of them, with SdkExclude restrictions.
         # EMULATOR_API: [22, 23, 24, 25, 26, 27, 28]
-        EMULATOR_API: [26]
+        EMULATOR_API: [26, 27, 28]
         EMULATOR_ARCH: [x86_64]
     steps:
       - uses: actions/checkout@v1
